syntax = "proto3";

option csharp_namespace = "Makc.Dummy.Reader.Infrastructure.Grpc.DummyItem";

package Reader;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service DummyItem {
    rpc Create (DummyItemCreateActionRequest) returns (DummyItemGetActionReply);
    rpc Delete (DummyItemDeleteActionRequest) returns (google.protobuf.Empty);
    rpc Get (DummyItemGetActionRequest) returns (DummyItemGetActionReply);
    rpc GetList (DummyItemGetListActionRequest) returns (DummyItemGetListActionReply);
    rpc Update (DummyItemUpdateActionRequest) returns (DummyItemGetActionReply);
}

message ActionRequestSort {
    string field = 1;
    bool is_desc = 2;
}

message ActionRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message DummyItemCreateActionRequest {
    int64 id = 1;
    string name = 2;
    string concurrency_token = 3;
}

message DummyItemDeleteActionRequest {
    string object_id = 1;
}

message DummyItemGetActionRequest {
    string object_id = 1;
}

message DummyItemGetActionReply {
    string object_id = 1;
    int64 id = 2;
    string name = 3;
    string concurrency_token = 4;
}

message DummyItemGetListActionRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message DummyItemGetListActionRequest {
    ActionRequestPage page = 1;
    ActionRequestSort sort = 2;
    DummyItemGetListActionRequestFilter filter = 3;
}

message DummyItemGetListActionReplyItem {
    string object_id = 1;
    int64 id = 2;
    string name = 3;
    string concurrency_token = 4;
}

message DummyItemGetListActionReply {
    int64 total_count = 1;
    repeated DummyItemGetListActionReplyItem items = 2;
}

message DummyItemUpdateActionRequest {
    string object_id = 1;
    int64 id = 2;
    string name = 3;
    string concurrency_token = 4;
}